# PyToNotion

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
PyToNotion/: pyNotion.py
tests/: get_emojis.py  get_page.py
tests/Blocks/: append_block_children.py  delete_block.py  get_block.py  get_block_children.py  update_block.py
tests/Comments/: create_comment.py  delete_comment.py  get_all_comments.py  get_comment.py  update_comment.py
tests/Databases/: create_database.py  get_database.py  update_database.py
tests/Datasources/: create_datasource.py  get_datasource.py  get_list_datasource_template.py  query_datasource.py  update_datasource.py
tests/Pages/: create_page.py  create_page_in_database.py  get_page.py  get_page_by_properties.py  get_pages.py  move_page.py  update_page.py
tests/Users/: get_bot.py  get_user.py  get_users.py
tests/Views/: create_view.py  delete_view.py  get_all_view.py  get_view.py  update_view.py
